@@ -9,6 +9,7 @@ mfs_write
 mfs_size
 mfs_unmap
 mfs_close
+createBasicViewHandler
 createMeshVec2fUInt
 createCPUBuffer
 createFragmentModule
