@@ -92,3 +92,4 @@
 - Rebuilt wx plug with swapbuffers support. built minimal ork sample with GL and OSG. Building minimal proland core sample with OSG.
 - Added support for rotation and move in proland_core test app.
 - Added Porland terrain1 sample in OSG.
+- Added terrain2 and terrain3 examples in OSG.
